--- a/package.json
+++ b/package.json
@@ -20,21 +20,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cli": "^7.0.0",
     "@nestjs/common": "^6.10.14",
     "@nestjs/config": "^0.3.0",
     "@nestjs/core": "^6.10.14",
     "@nestjs/graphql": "^6.6.2",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/swagger": "^4.3.2",
+    "acorn": ">=5.7.4",
     "apollo-server-express": "^2.11.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.7",
+    "minimist": ">=1.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "minimist": ">=1.2.2",
-    "acorn": ">=5.7.4"
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@nestjs/schematics": "^6.8.1",
