--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start",
+    "start:watch": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,12 +22,12 @@
   },
   "dependencies": {
     "@nestjs/cli": "^7.0.0",
-    "@nestjs/common": "^6.10.14",
-    "@nestjs/config": "^0.3.0",
-    "@nestjs/core": "^6.10.14",
-    "@nestjs/graphql": "^6.6.2",
-    "@nestjs/platform-express": "^6.10.14",
-    "@nestjs/swagger": "^4.3.2",
+    "@nestjs/common": "^7.0.1",
+    "@nestjs/core": "^7.0.1",
+    "@nestjs/graphql": "^7.0.1",
+    "@nestjs/platform-express": "^7.0.1",
+    "@nestjs/swagger": "^4.4.0",
+    "@types/graphql": "^14.5.0",
     "acorn": ">=5.7.4",
     "apollo-server-express": "^2.11.0",
     "dotenv": "^8.2.0",
@@ -38,25 +39,25 @@
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^6.8.1",
-    "@nestjs/testing": "^6.10.14",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.6",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.1",
+    "@types/express": "^4.17.3",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
     "jest": "^24.9.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.0",
+    "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
