--- a/package.json
+++ b/package.json
@@ -21,43 +21,43 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/common": "^7.0.1",
-    "@nestjs/core": "^7.0.1",
-    "@nestjs/graphql": "^7.0.1",
-    "@nestjs/platform-express": "^7.0.1",
-    "@nestjs/swagger": "^4.4.0",
+    "@nestjs/cli": "^7.5.1",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
+    "@nestjs/graphql": "^7.7.0",
+    "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/swagger": "^4.6.1",
     "@types/graphql": "^14.5.0",
-    "acorn": ">=5.7.4",
-    "apollo-server-express": "^2.11.0",
+    "acorn": "^8.0.4",
+    "apollo-server-express": "^2.18.2",
     "dotenv": "^8.2.0",
-    "graphql": "^14.6.0",
-    "graphql-tools": "^4.0.7",
+    "graphql": "^14.7.0",
+    "graphql-tools": "^4.0.8",
     "minimist": ">=1.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.1",
-    "@types/express": "^4.17.3",
+    "@nestjs/schematics": "^7.1.2",
+    "@nestjs/testing": "^7.4.4",
+    "@types/express": "^4.17.8",
     "@types/jest": "^24.9.1",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@types/node": "^13.13.25",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.3.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "ts-loader": "^6.2.2",
+    "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   },
   "jest": {
     "moduleFileExtensions": [
